--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         d3.select('body')
             .append('h5')
-            .text("* Loans included in the plot are only those with prosper loan ratings and estimated returns");
+            .text("* Data excludes loans which do not have prosper loan credit ratings and estimated returns");
 
                 
         d3.select('body')
@@ -64,7 +64,7 @@
 		var indicatorColor = indicator.defaultColors[2];
 
 		// The frame duration for the animation in milliseconds
-		var frame = 2000;
+		var frame = 3000;
 
 		var firstTick = true;
 
@@ -226,6 +226,7 @@
 		    .attr("y", function (d, i) { return 100 + i * 12; })
 			.style("font-family", "sans-serif")
 			.style("font-size", "14px")
+			.style("font-weight", "bold")
 			.style("color", "Black")
 			.text(function (d) { return d; });
 
@@ -237,10 +238,11 @@
 		    .enter()
 		    .append("text")
 		    .attr("id", "classify_text_below")
-		    .attr("x", 455)
+		    .attr("x", 445)
 		    .attr("y", function (d, i) { return 580 + i * 12; })
 			.style("font-family", "sans-serif")
 			.style("font-size", "14px")
+			.style("font-weight", "bold")
 			.style("color", "Black")
 			.text(function (d) { return d; });
 
